Closed Bug 325350 Opened 19 years ago Closed 19 years ago

Places build fails at nsBookmarksFeedHandler.cpp

Categories

(Firefox :: Bookmarks & History, defect)

x86
Windows XP
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: mossop, Unassigned)

References

Details

(Keywords: fixed1.8.1)

Attachments

(1 file)

Bug 323958 changed the parser method signatures but neglected to fix the call from the places bookmarks feed handler. Patch coming up.
This fixes the method call. Not sure who to get to review this.
Comment on attachment 210255 [details] [diff] [review] change parse call Brett, can you review/land this for Dave?
Attachment #210255 - Flags: review?(brettw)
That should have been from bug 323958
Blocks: 323958
No longer blocks: 323953
Comment on attachment 210255 [details] [diff] [review] change parse call This is just on trunk, right? I'm going to put #ifndef MOZILLA_1_8_BRANCH around it. We keep places code in sync between branch and trunk.
Attachment #210255 - Flags: review?(brettw) → review+
On branch and trunk (conditionally compiled).
Status: NEW → RESOLVED
Closed: 19 years ago
Keywords: fixed1.8.1
Resolution: --- → FIXED
The patch in bug 323958 did hit one file in places and that might need to have ifdefs around it to stop it hitting the branch. mozilla/browser/components/places/src/nsBookmarksHTML.cpp
Yeah, you probably want to fix that too. Sorry, I didn't realize that I'd touched places.
Bug 451915 - move Firefox/Places bugs to Firefox/Bookmarks and History. Remove all bugspam from this move by filtering for the string "places-to-b-and-h". In Thunderbird 3.0b, you do that as follows: Tools | Message Filters Make sure the correct account is selected. Click "New" Conditions: Body contains places-to-b-and-h Change the action to "Delete Message". Select "Manually Run" from the dropdown at the top. Click OK. Select the filter in the list, make sure "Inbox" is selected at the bottom, and click "Run Now". This should delete all the bugspam. You can then delete the filter. Gerv
Component: Places → Bookmarks & History
QA Contact: places → bookmarks
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: