[for mossop@blueprintit.co.uk] Bug 325350 r=brettw Places build fails due to nsIParser change.